turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:7: error: not found: value rules
	var nextState = rules(state)(color)(0);
                        ^